--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,11 @@
       "src": "server.js",
       "use": "@vercel/node"
     }
+  ],
+  "routes": [
+    {
+      "src": "/manifest.json",
+      "dest": "/server.js"
+    }
   ]
 }
