--- a/package.json
+++ b/package.json
@@ -2,10 +2,8 @@
   "name": "smart-torrentio-picker",
   "version": "1.0.0",
   "main": "server.js",
+  "license": "MIT",
   "dependencies": {
-    "axios": "^0.21.1"
-  },
-  "scripts": {
-    "start": "node server.js"
+    "express": "^4.18.2"
   }
 }
