--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,10 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "server.js",
-      "use": "@vercel/node"
-    }
+    { "src": "server.js", "use": "@vercel/node" }
   ],
   "routes": [
-    {
-      "src": "/manifest.json",
-      "dest": "/server.js"
-    }
+    { "src": "/manifest.json", "dest": "/server.js" },
+    { "src": "/stream/(.*)", "dest": "/server.js" }
   ]
 }
