--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
   "name": "smart-torrentio-picker",
   "version": "1.0.0",
+  "description": "A Stremio Addon to fetch torrents with the best seeders and 720p+ resolution",
   "main": "server.js",
-  "license": "MIT",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
-    "express": "^4.18.2"
-  }
+    "express": "^4.17.1",
+    "cors": "^2.8.5"
+  },
+  "author": "",
+  "license": "ISC"
 }
