--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "start": "node server.js"
   },
-  "dependencies": {
-    "express": "^4.17.1",
-    "cors": "^2.8.5"
+"dependencies": {
+  "express": "^4.18.2",
+  "cors": "^2.8.5",
+  "node-fetch": "^2.6.7"
   },
   "author": "",
   "license": "ISC"
 }
+
