--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,14 @@
-{
-  "name": "smart-torrent-picker",
-  "version": "1.0.0",
-  "main": "server.js",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "node-fetch": "^2.6.7"
+const manifest = {
+  "id": "org.alexsdev.smartautoplay",
+  "version": "2.0.0",
+  "name": "SmarT-Autoplay",
+  "description": "Autoplay for movies and TV shows.",
+  "logo": "https://raw.githubusercontent.com/stakepit/smart-torrentio-picker/main/logo.png",
+  "resources": ["stream"],
+  "types": ["movie", "series"],
+  "idPrefixes": ["tt"],
+  "behaviorHints": {
+    "configurable": false,
+    "adult": false
   }
-}
+};
