--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "smartautoplay",
-  "version": "1.0.0",
-  "description": "Stremio add-on that autoplays the best torrent (720p > 1080p).",
+  "name": "smart-autoplay-addon",
+  "version": "3.0.0",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
@@ -9,12 +8,6 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "node-fetch": "^2.6.7"
-  },
-  "engines": {
-    "node": ">=14"
-  },
-  "keywords": ["stremio", "addon", "torrent", "stream", "autoplay"],
-  "author": "AlexSdev",
-  "license": "MIT"
+    "torrent-search-api": "^2.1.4"
+  }
 }
