--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "node-fetch": "^2.6.1",
     "express": "^4.18.2",
     "torrent-search-api": "^2.1.4"
   }
